# QFLBenchmarking

./: QuantumFederatedLearningwithQuantumData.py  README.md  dataset.py
fedjax_arch/: dataset.py
flower/: README.md  debug.py  pyproject.toml  test_model.py
flower/flower/: __init__.py  client_app.py  server_app.py  task.py
flower/flower/models/: QFL_QD.py  __init__.py  vqc.py
other_flower/quickstart-pennylane/: pyproject.toml  test_model.py
other_flower/quickstart-pytorch/: pyproject.toml  test_model.py
other_flower/quickstart-pytorch/pytorchexample/: server_app.py
